<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Digital Sanctuary</string>
    <string name="nav_home">Home</string>
    <string name="nav_add">Add</string>
    <string name="nav_stats">Stats</string>
    <string name="nav_profile">Profile</string>
    <string name="currently_reading">Currently Reading</string>
    <string name="my_library">My Library</string>
    <string name="view_all">View All</string>
    <string name="search_hint">Search authors, titles, or genre</string>
    <string name="add_new_book">Add New Book</string>
    <string name="add_subtitle">Bring a new story into your sanctuary.</string>
    <string name="save_book">Save Book</string>
    <string name="continue_reading">Continue Reading</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="edit_book">Edit Book</string>
    <string name="synopsis">Synopsis</string>
    <string name="no_books">Belum ada buku.\nTekan + untuk menambahkan.</string>
    <string name="delete_title">Hapus Buku</string>
    <string name="delete_confirm">Apakah Anda yakin ingin menghapus \"%s\"?</string>
    <string name="btn_delete">Hapus</string>
    <string name="btn_cancel">Batal</string>
    <string name="upload_cover">Upload Cover</string>
    <string name="book_title_hint">Book Title</string>
    <string name="author_hint">Author</string>
    <string name="genre_hint">Select a genre…</string>
    <string name="year_hint">Year Published</string>
    <string name="isbn_hint">ISBN</string>
    <string name="pages_hint">Pages</string>
    <string name="synopsis_hint">Synopsis</string>
    <string name="total_books_read">Total Books Read</string>
    <string name="reading_goal">Reading Goal</string>
    <string name="current_streak">Current Streak</string>
    <string name="reading_activity">Reading Activity</string>
    <string name="top_genres">Top Genres</string>
    <string name="member_since">MEMBER SINCE</string>
</resources>
